--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AR Marker Mapper - A as Origin</title>
+  <title>AR Marker Mapper - A as Origin + Visual Boxes</title>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
   <style>
@@ -32,6 +32,13 @@
       display: none;
       border: 2px solid white;
     }
+    button {
+      margin-top: 5px;
+      padding: 5px 10px;
+      font-family: monospace;
+      font-size: 14px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -40,6 +47,7 @@
   <div id="ui">
     <div><strong>已掃描 Marker：</strong><span id="lastMarker">無</span></div>
     <img id="markerImage" src="" width="100">
+    <button onclick="copyJSON()">📋 複製 JSON</button>
     <div><strong>相對於 Marker A 的座標：</strong></div>
     <pre id="output">{}</pre>
   </div>
@@ -53,13 +61,30 @@
   >
     <a-entity camera></a-entity>
 
-    <!-- Markers -->
-    <a-marker type="pattern" url="patterns/marker-a.patt" id="markerA" emitevents="true"></a-marker>
-    <a-marker type="pattern" url="patterns/marker-b.patt" id="markerB" emitevents="true"></a-marker>
-    <a-marker type="pattern" url="patterns/marker-c.patt" id="markerC" emitevents="true"></a-marker>
-    <a-marker type="pattern" url="patterns/marker-d.patt" id="markerD" emitevents="true"></a-marker>
-    <a-marker type="pattern" url="patterns/marker-e.patt" id="markerE" emitevents="true"></a-marker>
-    <a-marker type="pattern" url="patterns/marker-f.patt" id="markerF" emitevents="true"></a-marker>
+    <!-- Markers + 可視化立方體 -->
+    <a-marker type="pattern" url="patterns/marker-a.patt" id="markerA" emitevents="true">
+      <a-box color="red" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
+    </a-marker>
+
+    <a-marker type="pattern" url="patterns/marker-b.patt" id="markerB" emitevents="true">
+      <a-box color="orange" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
+    </a-marker>
+
+    <a-marker type="pattern" url="patterns/marker-c.patt" id="markerC" emitevents="true">
+      <a-box color="yellow" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
+    </a-marker>
+
+    <a-marker type="pattern" url="patterns/marker-d.patt" id="markerD" emitevents="true">
+      <a-box color="green" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
+    </a-marker>
+
+    <a-marker type="pattern" url="patterns/marker-e.patt" id="markerE" emitevents="true">
+      <a-box color="blue" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
+    </a-marker>
+
+    <a-marker type="pattern" url="patterns/marker-f.patt" id="markerF" emitevents="true">
+      <a-box color="purple" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
+    </a-marker>
   </a-scene>
 
   <!-- JS Logic -->
@@ -71,11 +96,40 @@
     const worldData = {};
     let markerAWorldMatrix = null;
 
-    // 用於矩陣運算
     const tmpMatrix = new THREE.Matrix4();
     const tmpPosition = new THREE.Vector3();
     const tmpQuaternion = new THREE.Quaternion();
     const tmpScale = new THREE.Vector3();
+
+    const markerPositions = {};
+    const AR_UNIT_TO_METER = 1.0;
+
+    function convertToUnityCoordinates(pos) {
+      return {
+        x: pos.x,
+        y: pos.y,
+        z: pos.z
+      };
+    }
+
+    function smoothPosition(letter, newPos) {
+      const maxSamples = 5;
+      if (!markerPositions[letter]) markerPositions[letter] = [];
+      markerPositions[letter].push(newPos);
+      if (markerPositions[letter].length > maxSamples) markerPositions[letter].shift();
+
+      const sum = markerPositions[letter].reduce((acc, p) => ({
+        x: acc.x + p.x,
+        y: acc.y + p.y,
+        z: acc.z + p.z
+      }), { x:0, y:0, z:0 });
+
+      return {
+        x: sum.x / markerPositions[letter].length,
+        y: sum.y / markerPositions[letter].length,
+        z: sum.z / markerPositions[letter].length
+      };
+    }
 
     const markerIDs = ["A", "B", "C", "D", "E", "F"];
 
@@ -88,34 +142,43 @@
         markerImage.src = `images/${letter}.png`;
         markerImage.style.display = "block";
 
-        // 記錄 marker 的世界變換矩陣
         marker.object3D.updateMatrixWorld(true);
         const matrix = marker.object3D.matrixWorld.clone();
 
         if (letter === "A") {
-          markerAWorldMatrix = matrix.clone(); // A 為原點
+          markerAWorldMatrix = matrix.clone();
           worldData["A"] = {
-            x: 0,
-            y: 0,
-            z: 0,
+            x: 0, y: 0, z: 0,
             rotation: { x: 0, y: 0, z: 0 }
           };
-        } else if (markerAWorldMatrix) {
-          // 轉換為相對於 A 的座標
+        } else {
+          if (!markerAWorldMatrix) return;
           tmpMatrix.copy(markerAWorldMatrix).invert();
           matrix.premultiply(tmpMatrix);
           matrix.decompose(tmpPosition, tmpQuaternion, tmpScale);
+          tmpPosition.multiplyScalar(AR_UNIT_TO_METER);
+
+          const smoothedPos = smoothPosition(letter, {
+            x: tmpPosition.x,
+            y: tmpPosition.y,
+            z: tmpPosition.z
+          });
 
           const euler = new THREE.Euler().setFromQuaternion(tmpQuaternion, 'XYZ');
+          const rx = THREE.MathUtils.radToDeg(euler.x);
+          const ry = THREE.MathUtils.radToDeg(euler.y);
+          const rz = THREE.MathUtils.radToDeg(euler.z);
+
+          const unityPos = convertToUnityCoordinates(smoothedPos);
 
           worldData[letter] = {
-            x: +tmpPosition.x.toFixed(3),
-            y: +tmpPosition.y.toFixed(3),
-            z: +tmpPosition.z.toFixed(3),
+            x: +unityPos.x.toFixed(3),
+            y: +unityPos.y.toFixed(3),
+            z: +unityPos.z.toFixed(3),
             rotation: {
-              x: +THREE.MathUtils.radToDeg(euler.x).toFixed(1),
-              y: +THREE.MathUtils.radToDeg(euler.y).toFixed(1),
-              z: +THREE.MathUtils.radToDeg(euler.z).toFixed(1)
+              x: +rx.toFixed(1),
+              y: +ry.toFixed(1),
+              z: +rz.toFixed(1)
             }
           };
         }
@@ -123,6 +186,13 @@
         output.innerText = JSON.stringify(worldData, null, 2);
       });
     });
+
+    // 複製 JSON 按鈕
+    function copyJSON() {
+      navigator.clipboard.writeText(JSON.stringify(worldData, null, 2))
+        .then(() => alert("✅ 已複製到剪貼簿！"))
+        .catch(err => alert("❌ 複製失敗：" + err));
+    }
   </script>
 </body>
 </html>
