更新內容：換marker

--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@
   >
     <a-entity camera></a-entity>
 
-    <!-- Markers + 可視化立方體 -->
+    <!-- Markers + 可視化立方體 
     <a-marker type="pattern" url="patterns/marker-a.patt" id="markerA" emitevents="true">
       <a-box color="red" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
-
+-->
+    <a-marker preset="hiro" id="markerA" emitevents="true">
+      <a-box color="red" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
+    </a-marker>
+  
     <a-marker type="pattern" url="patterns/marker-b.patt" id="markerB" emitevents="true">
       <a-box color="orange" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
