--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div id="ui">
     <div><strong>已掃描 Marker：</strong><span id="lastMarker">無</span></div>
     <img id="markerImage" src="" width="100">
-    <button onclick="copyJSON()">📋 複製 JSON_001</button>
+    <button onclick="copyJSON()">📋 複製 JSON_003</button>
     <div><strong>相對於 Marker A 的座標：</strong></div>
     <pre id="output">{}</pre>
   </div>
@@ -61,15 +61,15 @@
   >
     <a-entity camera></a-entity>
 
-    <!-- Markers + 可視化立方體 
+    <!-- Markers + 可視化立方體-->
     <a-marker type="pattern" url="patterns/marker-a.patt" id="markerA" emitevents="true">
       <a-box color="red" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
--->
-    <a-marker preset="hiro" id="markerA" emitevents="true">
+ 
+    <a-marker preset="hiro" id="markerG" emitevents="true">
       <a-box color="red" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
-  
+
     <a-marker type="pattern" url="patterns/marker-b.patt" id="markerB" emitevents="true">
       <a-box color="orange" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
