更新內容：加有色方塊

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a-entity camera></a-entity>
 
     <!-- Markers + 可視化立方體-->
-    <a-marker type="pattern" url="patterns/marker-a.patt" id="markerA" emitevents="true">
+    <a-marker type="pattern" url="patterns/pattern-A.patt" id="markerA" emitevents="true">
       <a-box color="red" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
  
@@ -70,23 +70,23 @@
       <a-box color="red" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
 
-    <a-marker type="pattern" url="patterns/marker-b.patt" id="markerB" emitevents="true">
+    <a-marker type="pattern" url="patterns/pattern-B.patt" id="markerB" emitevents="true">
       <a-box color="orange" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
 
-    <a-marker type="pattern" url="patterns/marker-c.patt" id="markerC" emitevents="true">
+    <a-marker type="pattern" url="patterns/pattern-C.patt" id="markerC" emitevents="true">
       <a-box color="yellow" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
 
-    <a-marker type="pattern" url="patterns/marker-d.patt" id="markerD" emitevents="true">
+    <a-marker type="pattern" url="patterns/pattern-D.patt" id="markerD" emitevents="true">
       <a-box color="green" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
 
-    <a-marker type="pattern" url="patterns/marker-e.patt" id="markerE" emitevents="true">
+    <a-marker type="pattern" url="patterns/pattern-E.patt" id="markerE" emitevents="true">
       <a-box color="blue" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
 
-    <a-marker type="pattern" url="patterns/marker-f.patt" id="markerF" emitevents="true">
+    <a-marker type="pattern" url="patterns/pattern-F.patt" id="markerF" emitevents="true">
       <a-box color="purple" position="0 0.5 0" depth="0.2" height="0.2" width="0.2"></a-box>
     </a-marker>
   </a-scene>
